// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Description renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.emotion-1>.emotion-3 {
  font-weight: 500;
  color: #151a2d;
}

.emotion-1>.emotion-3:after {
  content: ':';
}

.emotion-1>.emotion-6 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.emotion-1 .emotion-6+.emotion-3 {
  margin-top: 16px;
}

<dl
    class="emotion-0 emotion-1 emotion-2"
  >
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Name
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      Big instance
    </dd>
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Size
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly inline 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.emotion-1>.emotion-3 {
  font-weight: 500;
  color: #151a2d;
}

.emotion-1>.emotion-3:after {
  content: ':';
}

.emotion-1>.emotion-6 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.emotion-1 .emotion-6+.emotion-3 {
  margin-top: 16px;
}

.emotion-1>.emotion-3 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.emotion-1>.emotion-6 {
  margin-top: 0;
}

.emotion-1 .emotion-6+.emotion-3+.emotion-6 {
  margin-top: 16px;
}

<dl
    class="emotion-0 emotion-1 emotion-2"
  >
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Name
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      Big instance
    </dd>
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Size
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`Description renders correctly seletable 1`] = `
<DocumentFragment>
  .emotion-1 {
  font-size: 16px;
  line-height: 16px;
  margin: 0;
}

.emotion-1>.emotion-3 {
  font-weight: 500;
  color: #151a2d;
}

.emotion-1>.emotion-3:after {
  content: ':';
}

.emotion-1>.emotion-6 {
  color: #4a4f62;
  margin: 0;
  margin-top: 8px;
}

.emotion-1 .emotion-6+.emotion-3 {
  margin-top: 16px;
}

.emotion-1>.emotion-3 {
  float: left;
  clear: left;
  margin-right: 8px;
}

.emotion-1>.emotion-6 {
  margin-top: 0;
}

.emotion-1 .emotion-6+.emotion-3+.emotion-6 {
  margin-top: 16px;
}

.emotion-1>.emotion-6 {
  -webkit-user-select: all;
  -moz-user-select: all;
  -ms-user-select: all;
  user-select: all;
}

.emotion-1>.emotion-6::selection {
  color: #eeeeff;
  background: #4f0599;
}

<dl
    class="emotion-0 emotion-1 emotion-2"
  >
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Name
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      Big instance
    </dd>
    <dt
      class="emotion-3 emotion-4 emotion-2"
    >
      Size
    </dt>
    <dd
      class="emotion-6 emotion-7 emotion-2"
    >
      125 GB
    </dd>
  </dl>
</DocumentFragment>
`;
